--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url(https://n6-img-fp.akamaized.net/free-photo/cute-flowers-on-pink-background-with-space-on-right_23-2147691006.jpg?size=338&ext=jpg);
+  background-image: url(https://3m3cna178rlp1rclw43v482p-wpengine.netdna-ssl.com/images/2015/01/flowershop.jpg);
 }
 .centerLabel {
   margin-top: 6px;
